2004-07-15  Brian Kahne  <bkahne@ibmoto.com>

	* Plasma should now be useable by others when installed.  I
	created "plasma", which is a wrapper program that invokes the main
	executable (plasma-comp).  This massages parameters into the
	proper order.  I also created plasma-config for printing link
	lines, etc.

	* Converted over to using libtool.  The main parser/compiler is
	now statically linked.  Installation seems to work.  I also fixed
	up the root makefile so that remaking after a change to
	configure.ac will work properly.

2004-07-14  Brian Kahne  <bkahne@ibmoto.com>

	* Added line directives to plasma output so that debugging and
	error messages work better.  To add a line directive, I created a
	new object derived from Leaf which inserts a newline before it
	prints itself, to ensure that a line directive is valid (these
	directives must occur at the beginning of a line).  The result is
	that you can put a breakpoint in the middle of a par block and
	compilation error messages refer to the .pa file, rather than the
	.ii file.

2004-07-13  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug w/alt parsing:  We didn't handle par blocks nested
	w/in alt.  Fixed this by calling TranslateExpression on p.body and
	adding the port variable to the environment so that the VarWalker
	would find it.  The test clock3 tests this.

	* Fixed bug in clocked channels- if a data value was already
	present, but not at the current time, we needed set_notify to
	create a waker.  The test clock3 tests this.

	* Added clock.pa to tests/sw to demonstrate a simple cpu/alu
	pipeline.

2004-07-12  Brian Kahne  <bkahne@ibmoto.com>

	* Added a clocked channel, ClockChan.  This is similar to
	QueueChan, except that the constructor's first argument is a clock
	period.  The second argument is the size of the queue (default is
	1).  This behaves like a normal channel, except that reads must
	occur on clock-cycle boundaries, i.e. (pTime() % period) == 0.